tests/typing/pass/ae/types/types_2.ae

type 'a list
type ('a, 'b) map
